# webcomics

./: .env.example  .gitignore  PLAN.md  README.md  dev.compose.yml  skills-lock.json
.github/workflows/: ci.yml
docs/: RUNBOOK.md  youtube-api-setup.md
docs/specs/: 2026-05-31-multi-platform-upload.md  2026-05-31-social-accounts-global.md  2026-05-31-upload-analytics.md  2026-05-31-upload-scheduler.md
ops/: make-quiz-tick.sh
ops/firefox-profiles/: README.md
ops/grafana/: README.md  webcomics-dashboard.json
ops/music-library/: README.md  (+2 more)
renderer-node/: Dockerfile  package-lock.json  package.json  tsconfig.json
scripts/: refresh_music_library.py
web-api/: .env.example  CLAUDE.md  Makefile  README.md  go.mod  go.sum
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
workers-py/: Dockerfile  Dockerfile.upload  pyproject.toml
workers-py/src/worker/: __init__.py  health.py  log_fields.py  main.py  redis_bus.py  settings.py
workers-py/src/worker/handlers/: audio.py  caption.py  image.py  metrics.py  music.py  script.py  upload.py
workers-py/src/worker/providers/: _selenium_common.py  elevenlabs.py  fal_images.py  metrics_facebook.py  metrics_instagram.py  metrics_tiktok.py  openrouter.py  selenium_facebook.py  selenium_instagram.py  selenium_tiktok.py  selenium_youtube.py  youtube_api.py
workers-py/src/worker/storage/: minio_client.py
workers-py/tests/: conftest.py  test_caption_handler.py  test_image_handler.py  test_music_handler.py  test_script_handler.py  test_upload_handler.py
(+228 files in other folders)
