[project]
name = "webcomics-worker"
version = "0.1.0"
description = "Webcomics pipeline AI worker (script + image)"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.7",
    "minio>=7.2.7",
    "openai>=1.40.0",
    "fal-client>=0.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "tenacity>=8.5.0",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
worker = "worker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
